--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "vanilla-router": "^1.2.8"
   }
 }
